# cs2-haskell

./: Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: release.yml
src/: build_systems.rs  main.rs  package.rs  parse.rs  shared.rs
src/commands/: install.rs  mod.rs  shared.rs  update.rs
