[package]
name = "cs2-haskell"
version = "1.2.1"
edition = "2021"
rust-version = "1.74"
authors = ["Hugo ARNAL <hugo@hugoarnal.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["cargo", "derive", "string"] }
regex = "1.12.1"
thiserror = "2.0.17"
